did more work on the notes menu, looked at setting up a list view in the main screen for lists of notebooks

--- a/app/src/main/res/layout/layout_note_cell.xml
+++ b/app/src/main/res/layout/layout_note_cell.xml
@@ -37,7 +37,8 @@
 
             android:ems="10"
 
-            android:text="Title"
+            android:text=""
+            android:hint="Title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
