--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,64 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    android:orientation="vertical"
+    android:background="?android:attr/selectableItemBackground"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
 
 
-
-
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
+        android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-        <LinearLayout
-            android:id="@+id/layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
-
-            <ListView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:divider="#000000"
-                android:dividerHeight=".5dp"
-                android:paddingLeft="1dp">
-
-            </ListView>
-
-            <LinearLayout
-                android:id="@+id/layoutItems"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp"/>
+        tools:layout_editor_absoluteY="0dp"
+        android:background="?android:attr/selectableItemBackground">
 
 
-            <ImageButton
-                android:id="@+id/addBtn"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginStart="312dp"
-                android:layout_marginTop="7dp"
-                android:backgroundTint="@color/cardview_shadow_end_color"
-                android:text="Add"
-                android:src="@drawable/add"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
-
-
-    </ScrollView>
-
+        <ImageButton
+            android:id="@+id/addBtn"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="312dp"
+            android:layout_marginTop="7dp"
+            android:backgroundTint="@color/cardview_shadow_end_color"
+            android:text="Add"
+            android:src="@drawable/add"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 </LinearLayout>
