--- a/app/src/main/res/layout/layout_image_cell_title.xml
+++ b/app/src/main/res/layout/layout_image_cell_title.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutImageCellNoTitle"
+        android:id="@+id/layoutImageCell"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
@@ -19,7 +19,7 @@
 
 
         <Button
-            android:id="@+id/buttonRemove"
+            android:id="@+id/buttonMenu"
             android:layout_width="31dp"
             android:layout_height="52dp"
             android:layout_marginStart="372dp"
@@ -28,42 +28,67 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <EditText
+            android:id="@+id/editTextTitle"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+
+            android:ems="10"
+
+            android:text="Title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageView
             android:id="@+id/imageView"
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:adjustViewBounds="true"
+            android:layout_marginTop="56dp"
             android:background="@drawable/border"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             android:padding="5dp"
             android:src="@drawable/emptyimage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
+            tools:layout_editor_absoluteX="0dp"
+            />
 
-        <Button
-            android:id="@+id/buttonImageFromCamera"
-            android:layout_width="129dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="224dp"
-            android:layout_marginTop="96dp"
-            android:text="Add Image from Camera"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/buttonImageFromFile"
             android:layout_width="129dp"
             android:layout_height="65dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="96dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="148dp"
             android:text="Add Image from file"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <Button
+            android:id="@+id/buttonImageFromCamera"
+            android:layout_width="129dp"
+            android:layout_height="65dp"
+            android:layout_marginStart="232dp"
+            android:layout_marginTop="148dp"
+            android:text="Add Image from Camera"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/DateTimeCreated"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="16dp"
+            android:text="TextView"
+            app:layout_constraintStart_toEndOf="@+id/editTextTitle"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/fileLocation"
