--- a/app/src/main/res/layout/layout_checklist_cell.xml
+++ b/app/src/main/res/layout/layout_checklist_cell.xml
@@ -51,6 +51,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+
+
             <ImageButton
                 android:id="@+id/buttonAdd"
                 android:layout_width="50dp"
