--- a/app/src/main/res/layout/layout_checklist_cell_title.xml
+++ b/app/src/main/res/layout/layout_checklist_cell_title.xml
@@ -80,6 +80,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
                 <ImageButton
                     android:id="@+id/buttonAdd"
                     android:layout_width="50dp"
