--- a/app/src/main/res/menu/note_menu.xml
+++ b/app/src/main/res/menu/note_menu.xml
@@ -4,6 +4,8 @@
     android:title="Rename Notebook" />
 <item android:id="@+id/setColour"
     android:title="Set Notebook colour" />
+<item android:id="@+id/setReminder"
+    android:title="Set Reminder" />
 <item android:id="@+id/delete"
     android:title="Delete Notebook" />
 
