fixed some bugs

--- a/app/src/main/res/layout/activity_note_page.xml
+++ b/app/src/main/res/layout/activity_note_page.xml
@@ -36,13 +36,14 @@
 
             <ImageButton
                 android:id="@+id/buttonAdd"
+                android:layout_gravity="right"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_marginStart="312dp"
+                android:layout_marginRight="30dp"
                 android:layout_marginTop="7dp"
                 android:backgroundTint="@color/cardview_shadow_end_color"
-                android:text="Add"
                 android:src="@drawable/add"
+                android:text="Add"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
