--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -21,6 +21,7 @@
 
     <LinearLayout
         android:id="@+id/layout"
+        android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -31,9 +32,11 @@
 
         <ImageButton
             android:id="@+id/addBtn"
+            android:layout_gravity="right"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginStart="312dp"
+            android:layout_marginRight="30dp"
+
             android:layout_marginTop="7dp"
             android:backgroundTint="@color/cardview_shadow_end_color"
             android:text="Add"
