--- a/app/src/main/res/layout/activity_open_note_cell.xml
+++ b/app/src/main/res/layout/activity_open_note_cell.xml
@@ -31,6 +31,8 @@
 
         <ImageButton
             android:id="@+id/openNoteImageButton"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
             android:layout_width="57dp"
             android:layout_height="57dp"
             android:layout_weight="1"
