--- a/app/src/main/res/layout/layout_note_cell_title.xml
+++ b/app/src/main/res/layout/layout_note_cell_title.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:clipToPadding="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutTextCell"
@@ -12,14 +14,47 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:orientation="vertical"
+        android:clipToPadding="false"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="dp">
+        tools:layout_editor_absoluteY="0dp">
 
 
+
+
+        <EditText
+            android:id="@+id/editTextTitle"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:clipToPadding="false"
+
+            android:ems="10"
+
+            android:hint="Title"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextTextMultiLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border"
+            android:clipToPadding="false"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
+            tools:layout_editor_absoluteX="0dp" />
 
         <ImageButton
             android:id="@+id/menuButton"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="31dp"
             android:layout_height="52dp"
             android:layout_marginStart="372dp"
@@ -28,35 +63,7 @@
             android:elevation="2dp"
             android:src="@drawable/optionsmenu"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="?android:attr/borderlessButtonStyle"/>
-
-        <EditText
-            android:id="@+id/editTextTitle"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-
-            android:ems="10"
-
-            android:text=""
-            android:hint="Title"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/editTextTextMultiLine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/border"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
 
         <TextView
             android:id="@+id/DateTimeCreated"
