--- a/app/src/main/res/layout/layout_note_cell_title.xml
+++ b/app/src/main/res/layout/layout_note_cell_title.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
-        android:orientation="vertical"
         android:clipToPadding="false"
+        android:orientation="vertical"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
@@ -22,59 +23,67 @@
 
 
 
-        <EditText
-            android:id="@+id/editTextTitle"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:clipToPadding="false"
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            tools:layout_editor_absoluteX="2dp"
+            tools:layout_editor_absoluteY="2dp">
 
-            android:ems="10"
+            <EditText
+                android:id="@+id/editTextTitle"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:clipToPadding="false"
 
-            android:hint="Title"
-            android:text=""
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                android:ems="10"
+
+                android:hint="Title"
+                android:text=""
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/menuButton"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="31dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="372dp"
+                android:layout_marginTop="4dp"
+                android:background="@android:color/transparent"
+                android:elevation="2dp"
+                android:src="@drawable/optionsmenu"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/DateTimeCreated"
+                android:layout_width="134dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="16dp"
+                android:text="TextView"
+                app:layout_constraintStart_toEndOf="@+id/editTextTitle"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </FrameLayout>
 
         <EditText
             android:id="@+id/editTextTextMultiLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/border"
             android:clipToPadding="false"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
             tools:layout_editor_absoluteX="0dp" />
-
-        <ImageButton
-            android:id="@+id/menuButton"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="31dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="372dp"
-            android:layout_marginTop="4dp"
-            android:background="@android:color/transparent"
-            android:elevation="2dp"
-            android:src="@drawable/optionsmenu"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/DateTimeCreated"
-            android:layout_width="134dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="16dp"
-            android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/editTextTitle"
-            app:layout_constraintTop_toTopOf="parent" />
-
 
 
 
