--- a/app/src/main/res/layout/layout_image_cell_title.xml
+++ b/app/src/main/res/layout/layout_image_cell_title.xml
@@ -37,6 +37,8 @@
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:singleLine="true"
+            android:maxLines="1"
 
             android:ems="10"
 
