--- a/app/src/main/res/layout/layout_note_cell_title.xml
+++ b/app/src/main/res/layout/layout_note_cell_title.xml
@@ -38,6 +38,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:clipToPadding="false"
+                android:singleLine="true"
+                android:maxLines="1"
 
                 android:ems="10"
 
