Fixed the multiline bug in the note cells by forcing to to have a min of 2 lines in the xml

--- a/app/src/main/res/layout/layout_note_cell.xml
+++ b/app/src/main/res/layout/layout_note_cell.xml
@@ -55,6 +55,7 @@
             android:gravity="start|top"
             android:inputType="textMultiLine"
             android:padding="15dp"
+            android:minLines="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp" />
