--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -11,37 +11,48 @@
     tools:context=".MainMenuActivity"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/layoutItems"
+
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"/>
-
-    <LinearLayout
-        android:id="@+id/layout"
-        android:layout_gravity="right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        android:background="?android:attr/selectableItemBackground">
+        tools:layout_editor_absoluteY="0dp">
 
 
-        <ImageButton
-            android:id="@+id/addBtn"
-            android:layout_gravity="right"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginRight="30dp"
+        
+        <LinearLayout
+            android:id="@+id/layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp"
+            android:background="?android:attr/selectableItemBackground">
 
-            android:layout_marginTop="7dp"
-            android:backgroundTint="@color/cardview_shadow_end_color"
-            android:text="Add"
-            android:src="@drawable/add"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layoutItems"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="0dp"/>
+
+
+            <ImageButton
+                android:id="@+id/addBtn"
+                android:layout_gravity="right"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_marginRight="30dp"
+
+                android:layout_marginTop="7dp"
+                android:backgroundTint="@color/cardview_shadow_end_color"
+                android:text="Add"
+                android:src="@drawable/add"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
