--- a/app/src/main/res/layout/layout_checklist_cell_title.xml
+++ b/app/src/main/res/layout/layout_checklist_cell_title.xml
@@ -66,7 +66,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/layoutBottom"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -88,21 +88,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-                <ImageButton
-                    android:id="@+id/buttonAdd"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="312dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="2dp"
-                    android:backgroundTint="#ffffff"
-                    android:src="@drawable/addsmall"
-                    android:text="Add"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
+            </RelativeLayout>
 
-            </LinearLayout>
+        <LinearLayout
+            android:id="@+id/buttonLayout"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/border"
+            app:layout_constraintTop_toBottomOf="@+id/layoutBottom">
+
+            <ImageButton
+                android:id="@+id/buttonAdd"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginStart="312dp"
+                android:layout_marginTop="2dp"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/addsmall"
+                android:text="Add"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
 
 
 
