--- a/app/src/main/res/layout/layout_image_cell.xml
+++ b/app/src/main/res/layout/layout_image_cell.xml
@@ -63,7 +63,7 @@
         <Button
             android:id="@+id/buttonImageFromCamera"
             android:layout_width="129dp"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="40dp"
             android:layout_marginTop="96dp"
@@ -77,7 +77,7 @@
         <Button
             android:id="@+id/buttonImageFromFile"
             android:layout_width="129dp"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="96dp"
             android:text="Add Image from file"
